--- a/app/index.html
+++ b/app/index.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Front</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    {{content-for 'head'}}
-
-    <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/front.css">
-
-    {{content-for 'head-footer'}}
-  </head>
-  <body>
-    {{content-for 'body'}}
-
-    <script src="assets/vendor.js"></script>
-    <script src="assets/front.js"></script>
-
-    {{content-for 'body-footer'}}
-  </body>
+   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>Front</title>
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      {{content-for 'head'}}
+      <link rel="stylesheet" href="assets/vendor.css">
+      <link rel="stylesheet" href="assets/front.css">
+      {{content-for 'head-footer'}}
+   </head>
+   <body>
+      <nav class="navbar navbar-light bg-faded">
+         <a class="navbar-brand" href="#">天津市金凯达城消防</a>
+         <ul class="nav navbar-nav">
+            <li class="nav-item active">
+               <a class="nav-link" href="#">首页</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" href="#">所有产品</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" href="#">业务服务</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" href="#">联系我们</a>
+            </li>
+         </ul>
+<!--          <form class="form-inline navbar-form-sm pull-right">
+            <input class="form-control form-control-sm" type="text" placeholder="搜索产品">
+            <button class="btn btn-sm btn-success-outline" type="submit">搜索</button>
+         </form> -->
+      </nav>
+      {{content-for 'body'}}
+      <script src="assets/vendor.js"></script>
+      <script src="assets/front.js"></script>
+      {{content-for 'body-footer'}}
+   </body>
 </html>
