--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,11 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Front</title>
+      <title>天津市金凯达成消防设备有限公司</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       {{content-for 'head'}}
+      <link rel="shortcut icon" type="image/ico" href="/images/favicon-fire.ico">
       <link rel="stylesheet" href="assets/vendor.css">
       <link rel="stylesheet" href="assets/front.css">
       {{content-for 'head-footer'}}
