Updated description and keywords

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,8 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>天津市金凯达成消防设备有限公司</title>
-      <meta name="description" content="">
+      <meta name="description" content="天津市金凯达成消防设备有限公司-官网">
+      <meta name="keywords" content="消防,灭火器,金凯达成">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       {{content-for 'head'}}
       <link rel="shortcut icon" type="image/ico" href="/images/favicon-fire.ico">
